--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-	"name": "game-stack",
+	"name": "svelte-game-client",
 	"version": "0.0.1",
+	"engines": {
+		"node": "16.9.0",
+		"npm": "7.21.1"
+	},
 	"scripts": {
 		"dev": "vite dev --port 3000",
 		"build": "vite build",
@@ -21,5 +25,10 @@
 		"svelte": "^3.44.0",
 		"vite": "^3.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"async-await-websockets": "^1.2.4",
+		"svelte-global-store": "^1.0.3",
+		"sveltekit-autoimport": "^1.6.9"
+	}
 }
