--- a/svelte-game-server/package.json
+++ b/svelte-game-server/package.json
@@ -24,7 +24,11 @@
 	"homepage": "https://github.com/kkortes/svelte-game-stack#readme",
 	"dependencies": {
 		"async-await-websockets": "^1.2.3",
-		"dotenv": "^16.0.1"
+		"dotenv": "^16.0.1",
+		"hashids": "^2.2.10",
+		"nodemailer": "^6.7.7",
+		"sha1": "^1.1.1",
+		"short-uuid": "^4.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.19"
