--- a/svelte-game-server/package.json
+++ b/svelte-game-server/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-game-server",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "",
 	"main": "index.js",
 	"engines": {
@@ -26,6 +26,7 @@
 		"async-await-websockets": "^1.2.3",
 		"dotenv": "^16.0.1",
 		"hashids": "^2.2.10",
+		"mongodb": "^4.8.1",
 		"nodemailer": "^6.7.7",
 		"sha1": "^1.1.1",
 		"short-uuid": "^4.2.0"
