--- a/package.json
+++ b/package.json
@@ -6,31 +6,30 @@
     "npm": "8.5.5"
   },
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "vite dev",
     "build": "vite build",
-    "package": "svelte-kit package",
-    "preview": "vite preview --port 3000",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "package": "vite package",
+    "preview": "vite preview",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.66",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.73",
+    "@sveltejs/kit": "^1.0.0-next.480",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
-    "vite": "^3.0.0"
+    "vite": "^3.1.0",
+    "sveltekit-autoimport": "^1.6.9"
   },
   "type": "module",
   "dependencies": {
     "async-await-websockets": "^1.2.4",
     "lodash": "^4.17.21",
-    "svelte-component-kit": "^1.4.8",
-    "svelte-global-store": "^1.0.4",
-    "sveltekit-autoimport": "^1.6.9"
+    "svelte-component-kit": "^1.5.0",
+    "svelte-global-store": "^1.0.4"
   }
 }
