--- a/svelte-game-server/package.json
+++ b/svelte-game-server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "16.15.0",
-    "npm": "8.5.5"
+    "node": "16.16.0",
+    "npm": "8.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,13 +23,12 @@
   },
   "homepage": "https://github.com/kkortes/svelte-game-stack#readme",
   "dependencies": {
-    "async-await-websockets": "^1.2.3",
+    "async-await-websockets": "^2.0.0",
     "dotenv": "^16.0.1",
     "hashids": "^2.2.10",
     "mongodb": "^4.8.1",
     "nodemailer": "^6.7.7",
-    "sha1": "^1.1.1",
-    "short-uuid": "^4.2.0"
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
