--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": "8.11.0"
   },
   "scripts": {
+    "predev": "vercel env pull",
     "dev": "vite dev",
     "build": "vite build",
     "package": "vite package",
