--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "svelte-game-client",
   "version": "0.0.2",
   "engines": {
-    "node": "16.16.0",
-    "npm": "8.11.0"
+    "node": "18.16.0",
+    "npm": "9.5.1"
   },
   "scripts": {
     "predev": "vercel env pull",
@@ -15,15 +15,15 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-vercel": "^1.0.0-next.73",
-    "@sveltejs/kit": "^1.0.0-next.480",
-    "eslint": "^8.16.0",
+    "@sveltejs/adapter-vercel": "^3.0.1",
+    "@sveltejs/kit": "^1.5.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.26.0",
     "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.44.0",
-    "vite": "^3.1.0",
+    "prettier-plugin-svelte": "^2.8.1",
+    "svelte": "^3.54.0",
+    "vite": "^4.3.0",
     "sveltekit-autoimport": "^1.6.9"
   },
   "type": "module",
