--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-game-client",
   "version": "0.0.2",
   "engines": {
-    "node": "18.15.0",
+    "node": "18",
     "npm": "9.5.0"
   },
   "scripts": {
@@ -17,14 +17,18 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^3.0.1",
     "@sveltejs/kit": "^1.5.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte": "^2.26.0",
+    "postcss": "^8.4.24",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.8.1",
     "svelte": "^3.54.0",
-    "vite": "^4.3.0",
-    "sveltekit-autoimport": "^1.6.9"
+    "sveltekit-autoimport": "^1.6.9",
+    "tailwind-merge": "^1.13.1",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.0"
   },
   "type": "module",
   "dependencies": {
