--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "svelte-game-client",
   "version": "0.0.2",
-  "engines": {
-    "node": "18.16.1",
-    "npm": "9.5.1"
-  },
   "scripts": {
     "predev": "vercel env pull",
     "dev": "vite dev",
@@ -33,6 +29,7 @@
   "type": "module",
   "dependencies": {
     "async-await-websockets": "^2.0.0",
+    "gl-vec2": "^1.3.0",
     "lodash": "^4.17.21",
     "svelte-component-kit": "^2.0.2",
     "svelte-global-store": "^1.0.4"
