--- a/svelte-game-server/package.json
+++ b/svelte-game-server/package.json
@@ -1,16 +1,12 @@
 {
   "name": "svelte-game-server",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "16.16.0",
-    "npm": "8.11.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --experimental-json-modules index.js",
-    "start": "node --experimental-json-modules index.js"
+    "dev": "bun --watch index.js",
+    "start": "bun index.js"
   },
   "repository": {
     "type": "git",
@@ -24,14 +20,8 @@
   "homepage": "https://github.com/kkortes/svelte-game-stack#readme",
   "dependencies": {
     "async-await-websockets": "^2.0.1",
-    "dotenv": "^16.0.1",
     "hashids": "^2.2.10",
     "mongodb": "^4.8.1",
-    "nodemailer": "^6.7.7",
-    "sha1": "^1.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
-  },
-  "type": "module"
+    "nodemailer": "^6.7.7"
+  }
 }
